# llm-from-scratch

./: .gitignore  README.md  pyproject.toml
src/01_dataset_preparation/: dataset_preparation.ipynb
src/eda/: eda.ipynb
