[project]
name = "llm-from-scratch"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "José Expósito", email = "jose.exposito89@gmail.com" }]

requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
# Dependencias para el exploratory Data Analysis del corpus
eda = [
    "datasets~=4.8.4",
    "ipykernel~=7.2.0",
    "ipywidgets~=8.1.8",
    "pandas~=3.0.2",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
llm_from_scratch = "llm_from_scratch.main:main"
